# opencv-python-freetype2

./: CMakeLists.txt  README.md  build.bat  demo.py  pyproject.toml  setup.py
tests/: perf.py
